@@ -30,6 +30,7 @@ CAY-2272 ColumnSelect: methods to manually control DISTINCT clause
 
 Bug Fixes:
 
+CAY-2021 cdbimport: detect when same FK constraint is defined twice
 CAY-2077 Bug in CayenneRuntimeException using wrong specified string in Formatter
 CAY-2094 SelectById query doesn't work from ROP client
 CAY-2240 Modeler: issue with cursor rendering for EJBQL query
@@ -40,6 +41,7 @@ CAY-2265 ServerRuntime.builder() fails to set default runtime name when a the pr
 CAY-2273 Modeler: default suggested cgen location is rooted in subpackage
 CAY-2275 Documentation: tutorial is out of sync with 4.0.M5 version
 CAY-2276 PrePersist listener registered as PostPersist in LifecycleCallbackRegistry.addListener(Class<?>, LifecycleListener)
+CAY-2279 cdbimport: skip PK comparison for VIEWs
 
 ----------------------------------
 Release: 4.0.M5
